--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jshint-stylish": "latest",
     "grunt-contrib-imagemin": "latest",
     "grunt-contrib-uglify": "latest",
-    "grunt-sass": "latest",
+    "grunt-contrib-sass": "latest",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-watch": "latest"
   }
